--- a/server/package.json
+++ b/server/package.json
@@ -13,24 +13,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^6.11.4",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.35",
-    "@types/passport": "^1.0.9",
-    "@types/passport-jwt": "^3.0.6",
-    "concurrently": "^7.2.0",
-    "nodemon": "^2.0.19",
-    "typescript": "^4.7.4"
+    "@types/node": "^17.0.45",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
+    "concurrently": "^7.6.0",
+    "nodemon": "^3.0.1",
+    "typescript": "^4.9.5"
   }
 }
