--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/bcryptjs": "^2.4.2",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
